<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddArticleActivity">

    <TextView
        android:id="@+id/titleAddArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_un_article"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/design_default_color_secondary"/>

    <EditText
        android:id="@+id/txtAddArticleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/titleAddArticle"
        app:layout_constraintLeft_toLeftOf="@id/titleAddArticle"
        android:layout_marginTop="40dp"
        android:ems="18"
        android:hint="@string/name"/>


    <EditText
        android:id="@+id/txtAddArticlePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtAddArticleName"
        app:layout_constraintLeft_toLeftOf="@id/txtAddArticleName"
        android:layout_marginTop="20dp"
        android:ems="3"
        android:inputType="numberDecimal"
        android:hint="@string/price"/>

    <TextView
        android:id="@+id/txtDevise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devise_euro"
        android:ems="1"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="@id/txtAddArticlePrice"
        app:layout_constraintLeft_toRightOf="@id/txtAddArticlePrice"
        android:layout_marginStart="5dp" />

    <RatingBar
        android:id="@+id/ratingAddArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/txtAddArticlePrice"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_marginRight="20dp"
        android:numStars="4"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:isIndicator="false" />

    <EditText
        android:id="@+id/txtAddArticleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtAddArticlePrice"
        app:layout_constraintLeft_toLeftOf="@id/txtAddArticlePrice"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:ems="18"
        android:gravity="start|top"
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/txtAddArticleUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtAddArticleDescription"
        app:layout_constraintLeft_toLeftOf="@id/txtAddArticleDescription"
        android:layout_marginTop="20dp"
        android:ems="18"
        android:hint="@string/url"/>

    <Button
        android:id="@+id/btnAddArticleBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="back"
        android:src="@drawable/planet_earth_32"
        android:text="@string/back"
        app:backgroundTint="#979393"
        app:icon="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/btnAddArticle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="addArticle"
        android:text="@string/add"
        app:backgroundTint="#4CAF50"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnAddArticleBack"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginEnd="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>