<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationActivity">

    <TextView
        android:id="@+id/titleConfiguration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuration"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/design_default_color_secondary"/>

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/titleConfiguration"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/labelSortPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tri_par_prix"
            android:layout_weight="0.1"
            app:layout_constraintTop_toTopOf="@id/firstLayout"
            app:layout_constraintLeft_toLeftOf="@id/firstLayout" />

        <Switch
            android:id="@+id/switchSortPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            app:layout_constraintTop_toBottomOf="@id/firstLayout"
            app:layout_constraintLeft_toLeftOf="@id/labelSortPrice"
            app:layout_constraintRight_toRightOf="@id/firstLayout"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/firstLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/labelDefaultPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/secondLayout"
            app:layout_constraintLeft_toLeftOf="@id/secondLayout"
            android:layout_weight="0.1"
            android:text="@string/prix_par_defaut" />

        <EditText
            android:id="@+id/txtDefaultPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            app:layout_constraintTop_toBottomOf="@id/secondLayout"
            app:layout_constraintLeft_toLeftOf="@id/labelDefaultPrice"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_marginTop="50dp"
        android:onClick="saveConfiguration"
        app:layout_constraintTop_toBottomOf="@id/secondLayout"
        app:layout_constraintLeft_toLeftOf="@id/secondLayout"
        app:layout_constraintRight_toRightOf="@id/secondLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>