<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DisplayArticleActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myDisplayArticleToolBar"
        app:title="DisplayArticleActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/titleDisplayArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_de_l_article"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintTop_toBottomOf="@id/myDisplayArticleToolBar"
        app:layout_constraintLeft_toLeftOf="@id/myDisplayArticleToolBar"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/design_default_color_secondary"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/titleDisplayArticle"
        app:layout_constraintLeft_toLeftOf="@id/titleDisplayArticle"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintLeft_toLeftOf="@id/txtTitle"
        android:layout_marginTop="20dp"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/txtPrice"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_marginRight="20dp"
        android:numStars="4"
        android:layout_marginEnd="20dp"
        android:isIndicator="false" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txtPrice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/txtTitle"/>


    <ImageButton
        android:id="@+id/urlButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.48"
        android:layout_marginLeft="10dp"
        android:src="@drawable/planet_earth_32"
        android:layout_marginStart="10dp"
        android:onClick="displayUrl"/>

    <ToggleButton
        android:id="@+id/btnState"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textOff="@string/tobuy"
        android:textOn="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/urlButton"
        app:layout_constraintWidth_percent="0.48"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="changeState"/>


</androidx.constraintlayout.widget.ConstraintLayout>